Part 3: cart page is added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class="h-full bg-gray-100">
+  <body class="h-full bg-[#f1f3f6]">
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
