--- a/ecommerce frontend/index.html
+++ b/ecommerce frontend/index.html
@@ -2,14 +2,10 @@
 <html class="h-full bg-gray-100" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/Images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <meta http-equiv="Content-Security-Policy" content="img-src 'self' data: https:; frame-src https:;">
-
-
-
-    <title>Vite + React</title>
+    <title>E-shop</title>
   </head>
   <body class="h-full bg-[#f1f3f6]">
     <div id="root"></div>
